# astro-app

./: .gitignore  README.md  astro-PLAN.md  pyproject.toml
tests/: test_chart.py  test_smoke.py
tests/fixtures/: charts.yaml
vedic_llm/: cli.py  geocode.py  report.py
vedic_llm/compute/: aspects.py  chart.py  dasha.py  dignity.py  ephemeris.py  transit.py  yogas.py
vedic_llm/extract/: dasha_facts.py  natal_facts.py  transit_facts.py
vedic_llm/llm/: client.py  orchestrator.py
vedic_llm/models/: chart.py  dossier.py  enums.py
vedic_llm/prompts/: dasha.py  house.py  house_deep.py  lagna.py  natal.py  quick.py  synthesis.py  transit.py
vedic_llm/prompts/topics/: career.py
vedic_llm/web/: __init__.py  app.py  service.py
vedic_llm/web/templates/: base.html  form.html  result.html
